feat: complete mapper extension combinations